# r-bar-index

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  build_index.c  hashing.c  hashing.h
data/: fib.txt  pattern_small.txt  tiny
